[gd_scene load_steps=28 format=4 uid="uid://b72wqoj6jd72s"]

[ext_resource type="Script" path="res://scripts/test_area.gd" id="1_ksqw7"]
[ext_resource type="Texture2D" uid="uid://swgnuwd8ie1y" path="res://sprites/hexes.png" id="2_kp7va"]
[ext_resource type="Texture2D" uid="uid://dvpb52k4ps4n2" path="res://sprites/perfectHexes.png" id="3_o5tjo"]
[ext_resource type="Texture2D" uid="uid://dluke1tljdocb" path="res://sprites/hexagon.png" id="3_wplyi"]
[ext_resource type="Texture2D" uid="uid://dtqovca3rbpnw" path="res://sprites/mousemagewip.png" id="4_16s7s"]
[ext_resource type="PackedScene" uid="uid://dn4174at2ue4k" path="res://scenes/Heroes/Knight.tscn" id="4_hydyf"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="5_7wwwt"]
[ext_resource type="Script" path="res://scripts/visualmap.gd" id="5_ly1wp"]
[ext_resource type="Script" path="res://scripts/end_turn_button.gd" id="7_6wc73"]
[ext_resource type="AudioStream" uid="uid://bgcx0q7eehjj0" path="res://Audio/Steam Hit A.wav" id="9_fqrm0"]
[ext_resource type="AudioStream" uid="uid://dpvj8yp511yu5" path="res://Audio/Steam Hit B.wav" id="10_i1wpn"]
[ext_resource type="AudioStream" uid="uid://beh3xfvn1tvsn" path="res://Audio/Mr Banks Main.wav" id="12_ksqlb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ixb2q"]
texture = ExtResource("2_kp7va")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_okt4p"]
texture = ExtResource("3_o5tjo")
texture_region_size = Vector2i(100, 89)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, 0, -25, -44.5, 25, -44.5, 50, 0, 25, 44.5, -25, 44.5)
3:0/0 = 0
5:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5wxjy"]
texture = ExtResource("3_wplyi")
texture_region_size = Vector2i(100, 100)
0:0/next_alternative_id = 7
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0.756787, 0.0396225, 0.596886, 1)
0:0/2 = 2
0:0/2/modulate = Color(0.2484, 0.2484, 0.2484, 1)
0:0/3 = 3
0:0/3/modulate = Color(1, 0, 0, 1)
0:0/4 = 4
0:0/4/modulate = Color(0, 1, 0, 1)
0:0/5 = 5
0:0/5/modulate = Color(1, 1, 0, 1)
0:0/6 = 6
0:0/6/modulate = Color(0, 1, 1, 1)
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8g7c7"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(100, 89)
physics_layer_0/collision_layer = 128
sources/2 = SubResource("TileSetAtlasSource_5wxjy")
sources/0 = SubResource("TileSetAtlasSource_ixb2q")
sources/1 = SubResource("TileSetAtlasSource_okt4p")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7p6gv"]
texture = ExtResource("2_kp7va")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rbwuw"]
texture = ExtResource("3_o5tjo")
texture_region_size = Vector2i(100, 89)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3mddg"]
texture = ExtResource("3_wplyi")
texture_region_size = Vector2i(100, 100)
0:0/next_alternative_id = 7
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0.62498, 0.000288399, 0.624975, 1)
0:0/2 = 2
0:0/2/modulate = Color(0.205117, 0.205117, 0.205117, 1)
0:0/3 = 3
0:0/3/modulate = Color(1, 0, 0, 1)
0:0/4 = 4
0:0/4/modulate = Color(0, 1, 0, 1)
0:0/5 = 5
0:0/5/modulate = Color(1, 1, 0, 1)
0:0/6 = 6
0:0/6/modulate = Color(0, 1, 1, 1)
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_26sf0"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(100, 89)
sources/0 = SubResource("TileSetAtlasSource_7p6gv")
sources/2 = SubResource("TileSetAtlasSource_3mddg")
sources/1 = SubResource("TileSetAtlasSource_rbwuw")

[sub_resource type="CircleShape2D" id="CircleShape2D_qhtdw"]
radius = 126.695

[sub_resource type="Animation" id="Animation_n0ool"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.25, 1.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/Up:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Down:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ecefi"]
resource_name = "lower_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.25, 1.25), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Down:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.433333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_33hk5"]
resource_name = "raise_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Up:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpc2v"]
_data = {
"RESET": SubResource("Animation_n0ool"),
"lower_down": SubResource("Animation_ecefi"),
"raise_up": SubResource("Animation_33hk5")
}

[sub_resource type="Gradient" id="Gradient_17yxi"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.539863, 1.03481e-06, 2.88785e-07, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w5fb2"]
gradient = SubResource("Gradient_17yxi")
metadata/_snap_enabled = true

[node name="TestArea" type="Node2D"]
script = ExtResource("1_ksqw7")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAQABAAAAAAAAAAEAAQABAAAAAAD//wAAAQABAAAAAAD/////AQABAAAAAAAAAP//AQABAAAAAAABAAEAAQABAAAAAAACAAAAAQABAAAAAAACAP//AQABAAAAAAADAP//AQABAAAAAAAEAAAAAQABAAAAAAAEAAEAAQABAAAAAAADAAEAAQABAAAAAAADAAAAAQABAAAAAAACAAIAAQABAAAAAAADAAIAAQABAAAAAAAEAAIAAQABAAAAAAAFAAEAAQABAAAAAAAGAAEAAQABAAAAAAAHAAAAAQABAAAAAAAGAAAAAQABAAAAAAAHAP//AQABAAAAAAAGAP//AQABAAAAAAAFAP//AQABAAAAAAAFAAIAAQABAAAAAAAGAAIAAQABAAAAAAAHAAEAAQABAAAAAAAIAAEAAQABAAAAAAAIAAAAAQABAAAAAAAIAP//AQABAAAAAAAHAP7/AQABAAAAAAAFAAAAAQABAAAAAAAGAP7/AQABAAAAAAAFAP3/AQABAAAAAAAEAP7/AQABAAAAAAADAP7/AQABAAAAAAAFAP7/AQABAAAAAAAEAP//AQABAAAAAAACAP7/AQABAAAAAAABAP7/AQABAAAAAAACAAEAAQABAAAAAAD+/wIAAQABAAAAAAD//wIAAQABAAAAAAD//wEAAQABAAAAAAAAAAIAAQABAAAAAAABAAIAAQABAAAAAAABAAMAAQACAAAAAAAAAAMAAQABAAAAAAACAAMAAQABAAAAAAADAAMAAQACAAAAAAAEAAMAAQABAAAAAAACAAQAAQACAAAAAAAHAP3/AgAAAAAAAAAJAP//AQACAAAAAAABAP//AQABAAAAAAAAAAAAAQABAAAAAAADAP3/AQABAAAAAAD+/wEAAQABAAAAAAD9/wAAAQABAAAAAAD9////AQABAAAAAAD+////AQABAAAAAAD///7/AQABAAAAAAD+/wAAAQABAAAAAAAAAP7/AQABAAAAAAD9//7/AQABAAAAAAD+//7/AQABAAAAAAD///3/AQABAAAAAAAAAP3/AQABAAAAAAABAP3/AQABAAAAAAACAP3/AQABAAAAAAD+/wMAAQABAAAAAAD//wMAAQACAAAAAAAEAP3/AQABAAAAAAABAPz/AQABAAAAAAD///z/AQABAAAAAAD+//3/AQABAAAAAAD9//3/AQABAAAAAAD8//7/AQABAAAAAAD9/wMAAQACAAAAAAD+/wQAAQACAAAAAAAAAAQAAQACAAAAAAAEAAQAAQACAAAAAAAFAAMAAQACAAAAAAAGAAMAAQACAAAAAAAHAAMAAQACAAAAAAAHAAIAAQACAAAAAAAIAAMAAQACAAAAAAAJAAIAAQACAAAAAAAJAAEAAQACAAAAAAAKAAEAAQACAAAAAAAKAAAAAQACAAAAAAAJAP7/AQACAAAAAAAIAP7/AQACAAAAAAAIAP3/AQACAAAAAAAHAPz/AQACAAAAAAAGAPz/AQACAAAAAAAFAPz/AQACAAAAAAAFAPv/AQACAAAAAAAEAPz/AQACAAAAAAADAPv/AQACAAAAAAACAPz/AQACAAAAAAABAPv/AQACAAAAAAAAAPz/AQACAAAAAAD///v/AQACAAAAAAD+//z/AQACAAAAAAD9//v/AQACAAAAAAD8//z/AQACAAAAAAD7//z/AQACAAAAAAD6//3/AQACAAAAAAD5//3/AQACAAAAAAD4//7/AQACAAAAAAD3//7/AQACAAAAAAD3////AQACAAAAAAD3/wAAAQACAAAAAAD3/wEAAQACAAAAAAD3/wIAAQACAAAAAAD4/wMAAQACAAAAAAD5/wMAAQACAAAAAAD6/wQAAQACAAAAAAD7/wQAAQACAAAAAAD8/wQAAQACAAAAAAD5/wEAAQABAAAAAAD6/wEAAQABAAAAAAD7/wAAAQABAAAAAAD8/wAAAQABAAAAAAD8////AQABAAAAAAD7//7/AQABAAAAAAD7//3/AQABAAAAAAD8//3/AQABAAAAAAD9//z/AQABAAAAAAD6//7/AQABAAAAAAD5//7/AQABAAAAAAD4////AQABAAAAAAD4/wAAAQABAAAAAAD5////AQABAAAAAAD6////AQABAAAAAAD6/wAAAQABAAAAAAD7////AQABAAAAAAD5/wAAAQABAAAAAAD4/wEAAQABAAAAAAD4/wIAAQABAAAAAAD5/wIAAQABAAAAAAD6/wIAAQABAAAAAAD7/wEAAQABAAAAAAD8/wEAAQABAAAAAAD8/wIAAQABAAAAAAD9/wEAAQABAAAAAAD9/wIAAQABAAAAAAD8/wMAAQABAAAAAAD7/wIAAQABAAAAAAD6/wMAAQABAAAAAAD7/wMAAQABAAAAAAADAPz/AQABAAAAAAAGAP3/AQABAAAAAAA=")
tile_set = SubResource("TileSet_8g7c7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)
script = ExtResource("5_7wwwt")

[node name="HeroHolder" type="Node2D" parent="."]

[node name="Knight" parent="HeroHolder" instance=ExtResource("4_hydyf")]
position = Vector2(-23, 1)

[node name="EnemyHolder" type="Node2D" parent="."]

[node name="Visualmap" type="Node2D" parent="."]
visible = false
position = Vector2(-174.535, 0)
scale = Vector2(1.25, 1.25)
script = ExtResource("5_ly1wp")

[node name="VisualSelection" type="TileMapLayer" parent="Visualmap"]
position = Vector2(-50, -50)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAQD/////AQAAAAAAAQD//wAAAQAAAAAAAQAAAP//AQAAAAAAAQABAP//AQAAAAAAAQABAAAAAQAAAAAAAQAAAAEAAQAAAAAAAQA=")
tile_set = SubResource("TileSet_26sf0")

[node name="StaticBody2D" type="StaticBody2D" parent="Visualmap"]
visible = false
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visualmap/StaticBody2D"]
position = Vector2(-0.390005, 0)
shape = SubResource("CircleShape2D_qhtdw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visualmap"]
libraries = {
"": SubResource("AnimationLibrary_gpc2v")
}

[node name="RotateHolder" type="Node2D" parent="Visualmap"]

[node name="Center" type="Sprite2D" parent="Visualmap/RotateHolder"]
texture = ExtResource("4_16s7s")

[node name="Top" type="Sprite2D" parent="Visualmap/RotateHolder"]
position = Vector2(0, -100)
texture = ExtResource("4_16s7s")

[node name="TopRight" type="Sprite2D" parent="Visualmap/RotateHolder"]
position = Vector2(75, -50)
texture = ExtResource("4_16s7s")

[node name="BottomRight" type="Sprite2D" parent="Visualmap/RotateHolder"]
position = Vector2(75, 50)
texture = ExtResource("4_16s7s")

[node name="Bottom" type="Sprite2D" parent="Visualmap/RotateHolder"]
position = Vector2(0, 100)
texture = ExtResource("4_16s7s")

[node name="BottomLeft" type="Sprite2D" parent="Visualmap/RotateHolder"]
position = Vector2(-75, 50)
texture = ExtResource("4_16s7s")

[node name="TopLeft" type="Sprite2D" parent="Visualmap/RotateHolder"]
position = Vector2(-75, -50)
texture = ExtResource("4_16s7s")

[node name="Sounds" type="Node2D" parent="Visualmap"]

[node name="Up" type="AudioStreamPlayer2D" parent="Visualmap/Sounds"]
stream = ExtResource("9_fqrm0")
volume_db = -11.223

[node name="Down" type="AudioStreamPlayer2D" parent="Visualmap/Sounds"]
stream = ExtResource("10_i1wpn")
pitch_scale = 0.74

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndTurnButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 984.0
offset_top = 584.0
offset_right = 1144.0
offset_bottom = 642.0
texture_normal = SubResource("GradientTexture2D_w5fb2")
stretch_mode = 0
script = ExtResource("7_6wc73")

[node name="Label" type="Label" parent="CanvasLayer/EndTurnButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -26.0
offset_right = 73.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "End Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -453.0
offset_top = -243.0
offset_right = 463.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -419.0
offset_top = -112.5
offset_right = 419.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
text = "Hickory dickory dock
You've been bested by the Clock.

GAME OVER.

"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 20.5
offset_right = 57.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
text = "Retry?"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ksqlb")
volume_db = -9.727
pitch_scale = 0.82
autoplay = true

[connection signal="input_event" from="Visualmap/StaticBody2D" to="." method="_on_static_body_2d_input_event"]
[connection signal="input_event" from="Visualmap/StaticBody2D" to="Visualmap" method="_on_static_body_2d_input_event"]
